# tokentoss

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  justfile  next.md  progress.md  pyproject.toml  test_hook.txt  test_micro_commit.txt
.claude/agents/: docs-updater.md
.claude/commands/: commit-auto.md  commit-macro.md  commit-manual.md  design-plan.md  design-review.md  tasks-align.md  tasks-implement.md  work-archive.md  work-status.md
.claude/hooks/: commit-auto.sh  macro-commit.sh  micro-commit.sh
.claude/rules/: memory.md
.gemini/: settings.json
.gemini/commands/commit/: auto.toml  macro.toml  manual.toml
.gemini/hooks/: commit-auto.sh  macro-commit.sh  micro-commit.sh
.gemini/hooks/templates/: macro-commit-prompt.txt
.gemini/skills/docs-updater/: SKILL.md
.gemini/skills/smart-tree/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-dispatch.yml  release.yml  security.yml  start-release.yml
_blueprint/: AGENTS.md  CLAUDE.md
_blueprint/archive/: 05-ci-cd-github-actions.md  AGENTS.md  RELEASE-1-merge-and-publish.md  RELEASE-2-v010-pypi.md  [reference]post-v010-next-steps-snapshot.md  bugfix-implementation.md  cleanup-notes.md  client_secrets_implementation.md  design-outline-gemini.md  phase-3-implementation.md  phase-5-polish-implementation.md
_blueprint/context/dockmaster-docks/: 00-reintroduction.md  01-overview.md  03-token-verification.md  04-rbac.md  06-service-configuration.md  07-service-endpoints.md  09-rbac-endpoints.md  10-admin-panel.md  11-cli-tool.md  12-infrastructure.md  13-migration-guide.md  A-env-vars.md  B-secrets-catalog.md  C-api-spec.md  E-confidence-notes.md
_blueprint/context/gemini-cli/: README.md  hooks.md  sandboxing.md  settings.md  sub-agents.md  system-prompt-override.md
_blueprint/context/google-iap/: README.md
_blueprint/context/gspread/: README.md  resources.md
_blueprint/context/platformdirs/: README.md  directory-types.md  platformdirs-overview.md
_blueprint/context/pytest/: pytest-general-foundations.md  pytest-project-guidance.md
_blueprint/context/pytest-mock/: configuration.md  overview.md  remarks.md  usage.md
_blueprint/features/: AGENTS.md  [planning]architectural-improvements-v1.md  [planning]docs-and-tutorials-v1.md  [planning]google-sheets-prototype-testing.md  [planning]widgets-subpackage-v1.md  [planning]workspace-api-integrations-v1.md
_blueprint/ideas/: plan-v1.md
_blueprint/implement/: C-release-implementation.md  D-test-service-gcp-setup.md  E-widget-testing-guide.md  github-actions-setup.md  initial-release-plan.md  release-implementation.md  test-service-gcp-setup.md  widget-testing-guide.md
_blueprint/notes/: ci-cd-notes.md  design-concept.md  design-outline-claude.md  design-outline-codex.md  nicholasgrundl-site-deployment.md  widget-testing-feedback.md
_blueprint/plan/: 01-next-steps.md  02-architectural-analysis.md  03-widgets-subpackage.md  04-distribution-pypi.md  07-docs-and-tutorials.md  08-manual-testing.md  next_steps.md  phase-2-implementation.md  polish-improvement-implementation.md  progress.md  test-service-cloud-run.md  testing-improvement-implementation.md  tokentoss_implementation.md  user_feedback.md  widget-testing-feedback.md
_blueprint/prompts/: PROMPT-interview-and-plan.md  PROMPT-orient-and-implement.md  PROMPT-replan-and-align.md  nextsteps.md
_blueprint/roadmap/: ROADMAP.md  decision-log.md  feature-backlog.md  implementation-progress.md  phase-history.md
docs/: gcp-admin-setup.md  quickstart.md
examples/: Dev-prerelease-testing.ipynb  Widget-Testing.ipynb
examples/test-service/: README.md  main.py
plans/: test-service-gcp-setup.md
src/tokentoss/: __init__.py  _logging.py  _telemetry.py  auth_manager.py  client.py  configure_widget.py  exceptions.py  setup.py  storage.py  widget.py
tests/: __init__.py  test_auth_manager.py  test_client.py  test_configure_widget.py  test_setup.py  test_storage.py  test_widget.py
(+13 files in other folders)
