[project]
name = "tokentoss"
version = "0.1.0"
description = "OAuth authentication from Jupyter notebooks for IAP-protected GCP services"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Nicholas Grundl" }
]
keywords = ["jupyter", "oauth", "iap", "gcp", "authentication"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Jupyter",
]
dependencies = [
    "anywidget>=0.9.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.2.0",
    "requests>=2.31.0",
    "platformdirs>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tokentoss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
