[project]
name = "tokentoss"
version = "0.1.0"
description = "OAuth authentication from Jupyter notebooks for IAP-protected GCP services"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Nicholas Grundl" }
]
keywords = ["jupyter", "oauth", "iap", "gcp", "authentication"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Jupyter",
]
[project.urls]
Homepage = "https://github.com/NicholasGrundl/tokentoss"
Repository = "https://github.com/NicholasGrundl/tokentoss"
Issues = "https://github.com/NicholasGrundl/tokentoss/issues"
Changelog = "https://github.com/NicholasGrundl/tokentoss/releases"

dependencies = [
    "anywidget>=0.9.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.2.0",
    "requests>=2.31.0",
    "platformdirs>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ruff>=0.11.0",
    "ty>=0.0.1a7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tokentoss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes — unused imports, undefined names
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort — import ordering
    "UP",     # pyupgrade — modernize for 3.10+
    "B",      # flake8-bugbear — common bugs
    "SIM",    # flake8-simplify — simplification
    "C4",     # flake8-comprehensions — comprehension style
    "PT",     # flake8-pytest-style — pytest conventions
    "T20",    # flake8-print — no stray print() in library code
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line length handled by formatter
    "SIM105", # contextlib.suppress — prefer explicit try/except/pass
]

[tool.ruff.lint.isort]
known-first-party = ["tokentoss"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]  # allow print() in tests

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.10"

[[tool.ty.overrides]]
include = ["src/tokentoss/widget.py"]
[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-assignment = "ignore"
